
===========================================================================
MARK: released gwenhywfar-1.13.2 (2005/05/25)
===========================================================================


2005/05/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed GWEN_DB_VariableExists(): Now works with paths as well


===========================================================================
MARK: released gwenhywfar-1.13.1 (2005/05/24)
===========================================================================


2005/05/24: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in CSV-exporter: Had problems with INT variables (was always
  expecting CHAR values)


===========================================================================
MARK: released gwenhywfar-1.13.0 (2005/05/20)
===========================================================================


2005/05/17: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_XMLNode_GetLocalizedCharValue()
- GWEN_PluginDescription_new() now uses localized version of elements in
  XML file


2005/05/13: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_Buffer_Crop() now adjusts the pos pointer if it is left behind the end
  of the buffer by truncating


2005/05/06: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- decreased verbosity in HTTP code


2005/05/01: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- typemaker is now able to create enums (including _toString and _fromString
  functions, reading and writing values as strings from/to GWEN_DBs)


===========================================================================
MARK: released gwenhywfar-1.12.1 (2005/04/30)
===========================================================================

